--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
 
-      <link rel="stylesheet" href="/css/main.min.d75aed8ad3e29bb52f11496e7ea87d135a3e978697182d0022e9d11f9cb0b8bb.css" integrity="sha256-11rtitPim7UvEUlufqh9E1o&#43;l4aXGC0AIunRH5ywuLs=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
 
 
-        <script src="/js/main.68803722f0bf7e941f63f5fee8f12d51b1e76aacd7c95702ef988dbd687a3aef.js" integrity="sha256-aIA3IvC/fpQfY/X&#43;6PEtUbHnaqzXyVcC75iNvWh6Ou8=" crossorigin="anonymous"></script>
+      <script src="/js/main.js"></script>
 
 <title>Pages | mamimikun personal website</title>
 
@@ -36,6 +36,9 @@
 	  
   <h1>Pages</h1>
   
+  
+    <h2><a href="/pages/resume/">Resume</a></h2>
+    <p>Welcome to a brief summary of my professional career.</p>
   
 
 	</div>
