fix letter margins

--- a/public/pages/resume/index.html
+++ b/public/pages/resume/index.html
@@ -42,7 +42,7 @@
 <div class="center-card-section">
   <h2>Experience</h2>
   
-  <h3>Software Engineer - SoFi/Galileo (May 2024 - Current)</h3>
+  <h3><b>Software Engineer - SoFi/Galileo (May 2024 - Current)</b></h3>
 <p>Working on diverse efforts for payment processing applications for emerging markets in Latin America.
 </p>
 <ul>
@@ -56,7 +56,7 @@
 </ul>
 
   
-  <h3>Senior Software Engineer - Citibanamex (Mar. 2024 - May 2024)</h3>
+  <h3><b>Senior Software Engineer - Citibanamex (Mar. 2024 - May 2024)</b></h3>
 <p>Gave customer support for internal-facing infrastructure and worked on migrations.
 </p>
 <ul>
@@ -68,7 +68,7 @@
 </ul>
 
   
-  <h3>Sensei - dev.f (Feb. 2024 - Mar. 2024)</h3>
+  <h3><b>Sensei - dev.f (Feb. 2024 - Mar. 2024)</b></h3>
 <p>Taught basic web development to students in a course given by dev.f, an online programming school.
 </p>
 <ul>
@@ -76,7 +76,7 @@
 </ul>
 
   
-  <h3>Software Developer 2 - Oracle (Jun. 2021 - Mar. 2024)</h3>
+  <h3><b>Software Developer 2 - Oracle (Jun. 2021 - Mar. 2024)</b></h3>
 <p>Worked on a distributed filesystem/LVM and tools that wrap around it to provide a robust storage solution for customers.
 </p>
 <ul>
@@ -92,7 +92,7 @@
 </ul>
 
   
-  <h3>Intern - Encora (Apr. 2021 - Jun. 2021)</h3>
+  <h3><b>Intern - Encora (Apr. 2021 - Jun. 2021)</b></h3>
 <p>Worked as a web development intern, mostly focused on a project that involved minimizing food loss within Sonora, Mexico.
 </p>
 <ul>
