--- a/public/pages/resume/index.html
+++ b/public/pages/resume/index.html
@@ -23,7 +23,7 @@
       &#9608;
     </span>
   </a>
-  <a id="home-link-small" class="navbar-header" href='/' id="home-link-small">~$ <span id='cursor-blinky'>&#9608;</span></a>
+  <a id="home-link-small" class="navbar-header" href='/' id="home-link-small">~$ <span id='cursor-blinky-sm'>&#9608;</span></a>
   <ul class="ul-navbar" id="ul-navbar">
     <li><a href='/pages/resume'>[Resume]</a></li>
   </ul>
