mod theme a bigt

--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -8,12 +8,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-      <link rel="stylesheet" href="/css/main.min.3ccb6ee884b4f7ef9ce69143f560c623a582902409a311cd33753863aa140523.css" integrity="sha256-PMtu6IS09&#43;&#43;c5pFD9WDGI6WCkCQJoxHNM3U4Y6oUBSM=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
 
 
-        <script src="/js/main.40760c49a10cd8d4b275a71739137764970c6ac202ffd41352a1604597bb2952.js" integrity="sha256-QHYMSaEM2NSydacXORN3ZJcMasIC/9QTUqFgRZe7KVI=" crossorigin="anonymous"></script>
+      <script src="/js/main.js"></script>
 
-<title>Categories | mamimikun personal website</title>
+<title>About Me | mamimikun personal website</title>
 
 
   </head>
@@ -37,9 +37,21 @@
       <div class="main-wrapper">
 	<div class="center-card">
 	  
-  <h1>Categories</h1>
-  
-  
+<div class="center-card-section">
+  <h1>About Me</h1>
+  <h2 id="a-little-bit-about-this-page">A little bit about this page!</h2>
+<p>This page is mostly a digital resume that I use for showcasing what I&rsquo;ve done in
+the past. It&rsquo;s sort of cumbersome to actually use a &lsquo;complete&rsquo; resume many
+times, so I mainly use this page to group everything I don&rsquo;t fit into a single
+page. I&rsquo;m a big fan of the minimalist aesthetic stuff so that&rsquo;s why I chose this
+terminal styled theme for my site.</p>
+<h2 id="a-little-bit-about-me">A little bit about me!</h2>
+<p>I like to live a very slow-paced life :). Most of my days are usually centered
+around work, cooking and my hobbies (which are mostly playing guitar and reading
+random stuff that I find). I love going out at night to check out new places to
+eat or grab a cup of coffee/tea.</p>
+
+</div>
 
 	</div>
       </div>    
