--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/main.css">
 
@@ -27,6 +29,7 @@
   <a id="home-link-small" class="navbar-header" href='/' id="home-link-small">~$ <span id='cursor-blinky-sm'>&#9608;</span></a>
   <ul class="ul-navbar" id="ul-navbar">
     <li><a href='/pages/resume'>[Resume]</a></li>
+    <li><a href='/pages/about'>[About me]</a></li>
   </ul>
   <a role="button" id="nav-dropdown-icon">[...]</a>
 </nav>
@@ -35,11 +38,13 @@
       <div class="main-wrapper">
 	<div class="center-card">
 	  
-<div class="center-card">
-  <h1></h1>
-  <h1 id="mauricio-martínez">Mauricio Martínez</h1>
-<h2 id="welcome-to-my-homepage">Welcome to my homepage</h2>
-<p><a href="/pages/resume/">[Resume]</a></p>
+<div class="center-card-section">
+  <h1 id="mauricios-homepage">Mauricio&rsquo;s homepage</h1>
+<p>Useful links:</p>
+<ol>
+<li><a href="/pages/resume/">[Resume]</a></li>
+<li><a href="/pages/about/">[About me]</a></li>
+</ol>
 
 </div>
 
