--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
       <script src="/js/main.js"></script>
 
-<title>mamimikun personal website</title>
+<title>mamimikun</title>
 
 
   </head>
@@ -40,10 +40,15 @@
 	  
 <div class="center-card-section">
   <h1 id="mauricios-homepage">Mauricio&rsquo;s homepage</h1>
-<p>Useful links:</p>
-<ol>
-<li><a href="/pages/resume/">[Resume]</a></li>
+<p>Quick website links:</p>
+<ol start="0">
 <li><a href="/pages/about/">[About me]</a></li>
+<li><a href="/pages/resume/">[Resume]</a></li>
+</ol>
+<p>Social links:</p>
+<ol start="0">
+<li><a href="https://github.com/mamimikun">[github]</a></li>
+<li><a href="https://www.linkedin.com/in/garlicnoodles/">[linkedin]</a></li>
 </ol>
 
 </div>
