--- a/public/pages/about/index.html
+++ b/public/pages/about/index.html
@@ -13,7 +13,7 @@
 
       <script src="/js/main.js"></script>
 
-<title>About Me | mamimikun personal website</title>
+<title>About Me | mamimikun</title>
 
 
   </head>
