--- a/public/pages/resume/index.html
+++ b/public/pages/resume/index.html
@@ -13,7 +13,7 @@
 
       <script src="/js/main.js"></script>
 
-<title>Resume | mamimikun personal website</title>
+<title>Resume | mamimikun</title>
 
 
   </head>
